# Compiler

./: .travis.yml  CMakeLists.txt  README.md  lex.yy.c  lexer  lexer.l  text.txt
src/: .travis.yml  ASTBuilder.cpp  ASTBuilder.h  ASTClassDeclaration.cpp  ASTClassDeclaration.h  ASTClasses.cpp  ASTClasses.h  ClassDeclaration.cpp  ClassDeclaration.h  Classes.cpp  Classes.h  Expressions.cpp  Expressions.h  Goal.cpp  Goal.h  IVisitor.h  Identifiers.cpp  Identifiers.h  Interpreter.cpp  MainClass.cpp  MainClass.h  MethodDeclaration.cpp  MethodDeclaration.h  PrettyPrinter.cpp  PrettyPrinter.h  Statements.cpp  Statements.h  StringConverter.h  Type.cpp  Type.h  Types.cpp  Types.h  VarDeclaration.cpp  VarDeclaration.h  lexer.l  main.cpp  parser.y  text.txt
src/ActivationRecords/: CInFrameAccess.h  CInRegAccess.h  CX86MiniJavaFrame.cpp  CX86MiniJavaFrame.h  IAccess.h  IFrame.h
src/CanonicalTree/: CTVisitor.h  CallCanonizer.cpp  CallCanonizer.h  ESEQCanonizer.cpp  ESEQCanonizer.h  ICTVisitor.h  SEQCanonizer.cpp  SEQCanonizer.h  call_canonizer.cpp  call_canonizer.h
src/CodeGen/: CodeGen.cpp  CodeGen.h  Instruction.cpp  Instruction.h
src/IRTree/: BasicBlockBuilder.cpp  BasicBlockBuilder.h  BasicBlockMarker.cpp  BasicBlockMarker.h  IIRExp.cpp  IIRExp.h  IIRStm.cpp  IIRStm.h  IIRVisitor.h  IRTreePrinter.cpp  IRTreePrinter.h  ISubtreeWrapper.cpp  ISubtreeWrapper.h  Label.cpp  Label.h  TraceBuilder.cpp  TraceBuilder.h  Translator.cpp  Translator.h
src/ST-AST/: ASTBuilder.cpp  ASTBuilder.h  ClassDeclaration.cpp  ClassDeclaration.h  Expressions.cpp  Expressions.h  Goal.cpp  Goal.h  IBase.h  Identifiers.cpp  Identifiers.h  ListDeclaration.h  LocStruct.h  MethodDeclaration.cpp  MethodDeclaration.h  PrettyPrinter.cpp  PrettyPrinter.h  Statements.cpp  Statements.h  Types.cpp  Types.h  VarDeclaration.cpp  VarDeclaration.h  YYLTYPE_struct.h
src/SymbolTable/: ClassInfo.cpp  ClassInfo.h  MethodInfo.h  STableBuilder.cpp  STableBuilder.h  Symbol.cpp  Symbol.h  Table.h  TypeChecker.cpp  TypeChecker.h  TypeInfo.h  VariableInfo.h  VisibilityBlock.cpp  VisibilityBlock.h
src/data/BadSamples/: LC_1.java  TC_2a.java
src/data/Samples/: BinaryTree.java  LinkedList.java
src/tests/: tests.cpp
